Update requirements.txt by removing unused libraries
Removed folium, datetime, streamlit_folium, and openpyxl from requirements.

--- a/.github/workflows/requirements.txt
+++ b/.github/workflows/requirements.txt
@@ -1,7 +1,11 @@
+# --- Bibliothèques Core ---
 streamlit
-folium
 pandas
 numpy
-datetime
-streamlit_folium
-openpyxl
+
+# --- Base de données ---
+firebase-admin
+
+# --- Génération de fichiers ---
+# Attention : le package s'appelle 'python-docx' et non 'docx'
+python-docx
