--- a/.github/workflows/requirements.txt
+++ b/.github/workflows/requirements.txt
@@ -1,11 +1,5 @@
-# --- Bibliothèques Core ---
 streamlit
 pandas
 numpy
-
-# --- Base de données ---
-firebase-admin
-
-# --- Génération de fichiers ---
-# Attention : le package s'appelle 'python-docx' et non 'docx'
+st-gsheets-connection
 python-docx
